--- a/itemappendwindow.ui
+++ b/itemappendwindow.ui
@@ -97,7 +97,22 @@
        <widget class="QDateEdit" name="dateEdit"/>
       </item>
       <item>
-       <layout class="QVBoxLayout" name="radioButton_layout"/>
+       <layout class="QVBoxLayout" name="radioButton_layout">
+        <item>
+         <widget class="QRadioButton" name="radioButton_anime">
+          <property name="text">
+           <string>Anime</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="radioButton_manga">
+          <property name="text">
+           <string>Manga</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </item>
