--- a/itemappendwindow.ui
+++ b/itemappendwindow.ui
@@ -160,20 +160,7 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
-       <widget class="QTextEdit" name="name_text">
-        <property name="minimumSize">
-         <size>
-          <width>150</width>
-          <height>100</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>1000</width>
-          <height>1000</height>
-         </size>
-        </property>
-       </widget>
+       <widget class="QLineEdit" name="name_text"/>
       </item>
      </layout>
     </item>
