--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>858</width>
-    <height>438</height>
+    <height>452</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -85,7 +85,13 @@
      </widget>
     </item>
     <item>
-     <layout class="QVBoxLayout" name="widget_right"/>
+     <layout class="QVBoxLayout" name="widget_right_box">
+      <item>
+       <widget class="QWidget" name="widget_right" native="true">
+        <layout class="QVBoxLayout" name="verticalLayout"/>
+       </widget>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
