--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -71,7 +71,7 @@
       <item>
        <widget class="QPushButton" name="pushButton">
         <property name="text">
-         <string>PushButton</string>
+         <string>Add</string>
         </property>
        </widget>
       </item>
