--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -69,7 +69,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="addButton">
         <property name="text">
          <string>Add</string>
         </property>
@@ -92,6 +92,9 @@
        </widget>
       </item>
      </layout>
+    </item>
+    <item>
+     <widget class="QWidget" name="widget_right_info" native="true"/>
     </item>
    </layout>
   </widget>
