--- a/itemappendwindow.ui
+++ b/itemappendwindow.ui
@@ -18,8 +18,8 @@
     <rect>
      <x>230</x>
      <y>80</y>
-     <width>461</width>
-     <height>481</height>
+     <width>390</width>
+     <height>638</height>
     </rect>
    </property>
    <property name="minimumSize">
@@ -210,9 +210,44 @@
      </layout>
     </item>
     <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_7">
+      <item>
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Link:    </string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="Link_QLineEdit"/>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_8">
+      <item>
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Repetion period :</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QSpinBox" name="repetitionPerioQSpinBox"/>
+      </item>
+     </layout>
+    </item>
+    <item>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
-       <widget class="QLineEdit" name="name_text"/>
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Name:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="name_QLineEdit"/>
       </item>
      </layout>
     </item>
