--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -87,6 +87,9 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_right">
       <item>
+       <widget class="QWidget" name="widget_info" native="true"/>
+      </item>
+      <item>
        <widget class="QWidget" name="widget_right" native="true">
         <layout class="QVBoxLayout" name="verticalLayout"/>
        </widget>
